--- a/src/styles/TrendingStreams.css
+++ b/src/styles/TrendingStreams.css
@@ -18,6 +18,17 @@
   min-height: 180px;
 }
 
+.ad-label {
+  top: 10px;
+  right: 10px;
+  color:rgba(0, 0, 0, 0.5);
+  font-size: 12px;
+  padding: 2px 6px;
+  border-radius: 4px;
+  z-index: 10;
+  font-weight: 500;
+}
+
 .ad-content {
   display: flex;
   width: 100%;
@@ -243,6 +254,13 @@
     padding: 20px 20px 10px 20px;
     text-align: center;
     align-items: center;
+  }
+
+  .ad-label {
+    font-size: 10px;
+    padding: 1px 4px;
+    top: 5px;
+    right: 5px;
   }
   
   .ad-subtext {
